--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nanoid": "^5.1.6",
     "prettier": "^3.7.4",
     "prop-types": "^15.8.1",
-    "react-sortable-hoc": "^2.0.0"
+    "react-sortable-hoc": "^2.0.0",
+    "use-debounce": "^10.1.0"
   },
   "packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48"
 }
